// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Checkbox renders checked Checkbox component 1`] = `
.c0 {
  position: relative;
  display: block;
  padding-left: 3rem;
  margin: 1rem;
  cursor: pointer;
}

.c1 {
  position: absolute;
  visibility: hidden;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  height: 2.8rem;
  width: 2.8rem;
  border: 2px solid #b0b0b0;
  border-radius: 0.25rem;
}

.c3 {
  display: block;
  color: #222222;
  font-size: 1.8rem;
  font-weight: 400;
  margin: 1rem;
  cursor: pointer;
}

.c4 {
  position: absolute;
  left: 0.5rem;
  top: 0;
}

.c4 svg {
  fill: #00a09f;
}

<label
  className="c0"
>
  <input
    checked={true}
    className="c1"
    type="checkbox"
  />
  <span
    className="c2"
  />
  <span
    className="c3"
  />
  <span
    className="c4"
  >
    <svg
      fill="#222"
      height="16"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.591 15.517L0 7.926l3.182-3.181 4.409 4.408L16.745 0l3.181 3.182z"
      />
    </svg>
  </span>
</label>
`;

exports[`COMPONENT - Checkbox renders unchecked Checkbox component 1`] = `
.c0 {
  position: relative;
  display: block;
  padding-left: 3rem;
  margin: 1rem;
  cursor: pointer;
}

.c1 {
  position: absolute;
  visibility: hidden;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  height: 2.8rem;
  width: 2.8rem;
  border: 2px solid #b0b0b0;
  border-radius: 0.25rem;
}

.c3 {
  display: block;
  color: #222222;
  font-size: 1.8rem;
  font-weight: 400;
  margin: 1rem;
  cursor: pointer;
}

<label
  className="c0"
>
  <input
    checked={false}
    className="c1"
    type="checkbox"
  />
  <span
    className="c2"
  />
  <span
    className="c3"
  />
</label>
`;
